src/test/deca/context/invalid/created/binary_exp/op_bool/and_A_float.deca
// Description :
//    test and entre un A et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.33) Type gauche A. Type droit float Type attendu: ‘boolean’
class A{}
{
A a;
float b;
boolean c = a && b;
}
